# vereda-verify-soroban

./: LICENSE  README.md  add-screenshots.ps1  package-lock.json  package.json
apps/painel/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/painel/src/: App.tsx  index.css
apps/painel/src/components/: ConsultaRWA.tsx  IntroPage.tsx  Navbar.tsx  PainelViveiro.tsx  RegistroRWA.tsx  WalletModal.tsx
apps/painel/src/contexts/: ThemeContext.tsx
apps/web-portal/: .env  package.json
apps/web-portal/src/hooks/: useVereda.ts
apps/web-portal/src/lib/: stellar.ts
contracts/vereda/: Cargo.toml
contracts/vereda-core/: Cargo.toml
contracts/vereda/src/: lib.rs
contrato-vereda/: Cargo.toml
contrato-vereda/src/: lib.rs
contrato-vereda/test_snapshots/tests/: test_avancar_fase_sequencial.1.json  test_ciclo_completo_esg.1.json  test_iniciar_lote_com_sucesso.1.json  test_transicao_invalida_deve_falhar.1.json
painel/: README.md  package-lock.json  package.json  vite.config.ts
painel/src/: App.tsx
